# handwriter.ttf

./: .gitattributes  .gitmodules  Makefile  README.md
synthesizer/: Cargo.toml
synthesizer/src/: io.rs  lib.rs  myrand.rs  nn.rs  raster.rs  tokenizer.rs  utils.rs  ziggurat_tables.rs
weights/: synthesis_network_52.onnx  synthesis_network_52.rten
